// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/molecules/FormFooter with submit and cancel button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  font-size: 1rem;
  font-weight: 600;
  color: rgb(33,18,94);
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c2:hover {
  color: #513CA3;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem 1.875rem;
}

.c1 button {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 button:nth-child(2) {
  margin-left: 2rem;
}

@media (max-width:540px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c1 button:nth-child(2) {
    margin-left: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      color="secondary"
      onClick={[Function]}
      size="md"
      type="button"
    >
      Cancel
    </button>
    <button
      className="fa-rounded-3xl focus:fa-outline-none fa-align-middle fa-text-center fa-bg-primary-medium fa-text-white hover:fa-bg-primary-darkest focus:fa-bg-primary-light fa-h-10 fa-px-3"
      disabled={false}
      onClick={[Function]}
      style={Object {}}
      type="button"
    >
      <span
        className="fa-align-middle fa-ml-2"
      >
        Save
      </span>
    </button>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/molecules/FormFooter with submit button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem 1.875rem;
}

.c1 button {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 button:nth-child(2) {
  margin-left: 2rem;
}

@media (max-width:540px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c1 button:nth-child(2) {
    margin-left: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="fa-rounded-3xl focus:fa-outline-none fa-align-middle fa-text-center fa-bg-primary-medium fa-text-white hover:fa-bg-primary-darkest focus:fa-bg-primary-light fa-h-10 fa-px-3"
      disabled={false}
      onClick={[Function]}
      style={Object {}}
      type="button"
    >
      <span
        className="fa-align-middle fa-ml-2"
      >
        Save
      </span>
    </button>
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/molecules/FormFooter with top divider 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem 1.875rem;
}

.c1 button {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 button:nth-child(2) {
  margin-left: 2rem;
}

@media (max-width:540px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c1 button:nth-child(2) {
    margin-left: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="fa-rounded-3xl focus:fa-outline-none fa-align-middle fa-text-center fa-bg-primary-medium fa-text-white hover:fa-bg-primary-darkest focus:fa-bg-primary-light fa-h-10 fa-px-3"
      disabled={false}
      onClick={[Function]}
      style={Object {}}
      type="button"
    >
      <span
        className="fa-align-middle fa-ml-2"
      >
        Save
      </span>
    </button>
  </div>
  <div
    className="c2"
  />
</div>
`;
